2009-12-01  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Alexey Proskuryakov.

        Make pywebsocket log errors to a file
        https://bugs.webkit.org/show_bug.cgi?id=31604

        * Scripts/run-webkit-tests: Log output to a pywebsocket_log.txt file in results directory
        (by passing the path to the server via a recently added -l option).

2009-12-01  Adam Roben  <aroben@apple.com>

        Fix tests that use the TestNetscapePlugin in Debug_Internal builds

        Reviewed by Ada Chan.

        Fixes <http://webkit.org/b/32027> REGRESSION (r49705): Tests that use
        TestNetscapePlugin fail in Debug_Internal builds

        * DumpRenderTree/win/DumpRenderTree.cpp: Use the "_Debug" plugin
        directory in Debug and Debug_All builds, but not in Debug_Internal
        builds.

2009-12-01  Adam Roben  <aroben@apple.com>

        Re-enable DRT's watchdog timer on Windows

        It was accidentally disabled in r50907.

        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::setWaitToDump): Remove a "false &&" that snuck
        into an if condition.

2009-12-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        check-webkit-style complains about #imports with / in them
        https://bugs.webkit.org/show_bug.cgi?id=32022

        We need to exclude #import directives in addition to #include from the
        binary operator whitespace checks.

        * Scripts/modules/cpp_style.py:
        * Scripts/modules/cpp_style_unittest.py:

2009-11-30  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        check-webkit-style is slightly too verbose
        https://bugs.webkit.org/show_bug.cgi?id=32010

        check-webkit-style prints out a bunch of "done" lines that seem redundant,
        especially for the style-queue.

        * Scripts/modules/cpp_style.py:

2009-11-30  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Eric Seidel.
